<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#021e29"
    tools:context=".RegActivity" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="#ffffff"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/reg_user" />

    <EditText
        android:id="@+id/RegUserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/reg_userName"
      
        android:background="@drawable/login_input_bg"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="20dp"
        android:padding="10dp"
        android:ems="10" />

    <EditText
        android:id="@+id/RegPassWord"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/reg_userPass"
    
        android:background="@drawable/login_input_bg"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="12dp"
        android:padding="10dp"
        android:ems="10" />

    <EditText
        android:id="@+id/RegPassWordAg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/reg_userPassRe"
        
        android:background="@drawable/login_input_bg"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="12dp"
        android:padding="10dp"
        android:ems="10" />

    <EditText
        android:id="@+id/RegAge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/reg_userAge"
    
        android:background="@drawable/login_input_bg"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="12dp"
        android:padding="10dp"
        android:ems="10" />
    
     <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
    	android:layout_marginRight="16dp"
    	android:layout_marginTop="10dp"
    	android:textColor="#A9A9A9"
        android:text="@string/reg_sex"  
        android:textSize="20sp" 
            />

    <RadioGroup
        android:id="@+id/RegSex"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
    	android:layout_marginRight="16dp"
    	android:layout_marginTop="12dp"
    	android:orientation="horizontal"
         >
    <RadioButton
        android:id="@+id/radioMale"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="男"
        android:textColor="#A9A9A9"
        android:checked="true"
         />

    <RadioButton
        android:id="@+id/radioFemale"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#A9A9A9"
        android:text="女" />
        
    </RadioGroup>

    <EditText
        android:id="@+id/RegMail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/reg_userMail"
     
        android:background="@drawable/login_input_bg"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="12dp"
        android:padding="10dp"
        android:ems="10" />

    <Button
        android:id="@+id/RegBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_bk"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="20dp"
        android:text="@string/reg_btnReg" />
    
</LinearLayout>
